# -flyby-fingerprints-sandbox

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  REPORTING.md  STATUS.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: GUARDIAN_CHECKLIST.md  pull_request_template.md  settings.yml
artifacts/: residuals_summary.json
binder/: environment.yml  postBuild  requirements.txt
data/: events.csv  sb_trials.csv
docs/: DATASETS.md  Guardian_Success_Metrics.md  architecture_overview.md  benchmarks.md  guardian_framework.md  index.md  interaction_matrix.md  notebooks.md  rf_heating_model.md  systematic_effects.md  validation_policy.md
examples/: run_phase2_baseline.py  run_phase2_sweep.py  run_rf_heating_baseline.py  run_toy.py
experiments/: README.md
notebooks/: Background_Model_Explorer.ipynb  Background_Model_Explorer_APP.ipynb  fast_triad_sandbox.ipynb
numerics/: README.md
scripts/: generate_report.py  guardian-cli.py  make_benchmarks_placeholder.py  make_interaction_placeholder.py  run_background_sim.py  run_triad.py  update_status_dashboard.py  util_hashes.py  validate_statistics.py
simulations/: background_effects.py  null_validation.py
status/: status.yml
tests/: guardian_tests.py  test_baseline_validator.py  test_benchmarks.py  test_constraint_mapper_schema.py  test_guardian_phase2.py  test_guardian_phase2_toggle.py  test_integration_safety.py  test_interaction_diagnostics.py  test_rf_heating.py  test_rf_heating_bounds.py
theory/: README.md  _glossary.md  (+1 more)
(+101 files in other folders)
