[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flyby-fingerprints"
version = "0.1.0"
description = "Sandbox for background analysis and fly-by collision fingerprints"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "pandas>=2.1"
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
notebooks = [
  "ipywidgets>=8.1",
  "jupyterlab>=4",
  "notebook>=7",
  "voila>=0.5.6",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
